Regression: Line Art - Vertex Weight Transfer to a target group doesn't work #103887

Closed
opened 2023-01-14 20:22:20 +01:00 by Hoang Duy Tran · 12 comments
Member

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 645 Intel Inc. 4.1 INTEL-14.7.8

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-19 20:56, hash: c2a8d8b18d
Broken: 3.0
Worked: 2.93.14

Caused by 841df831e8 and 3558bb8eae.

Short description of error
Please see this screencast to see steps producing the error:

20230114_line_art_Vertex_Weight_Transfer_does_not_work.mp4

This is the test file:
20230114_350_grease_pencil_line_art_vertex_weight_transfer_and_opacity_modifier_from_Group_to_TargetGroup_not_working_test_file_0001.blend

**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 645 Intel Inc. 4.1 INTEL-14.7.8 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-19 20:56, hash: `c2a8d8b18d` Broken: 3.0 Worked: 2.93.14 Caused by 841df831e8 and 3558bb8eae. **Short description of error** Please see this screencast to see steps producing the error: [20230114_line_art_Vertex_Weight_Transfer_does_not_work.mp4](https://archive.blender.org/developer/F14150018/20230114_line_art_Vertex_Weight_Transfer_does_not_work.mp4) This is the test file: [20230114_350_grease_pencil_line_art_vertex_weight_transfer_and_opacity_modifier_from_Group_to_TargetGroup_not_working_test_file_0001.blend](https://archive.blender.org/developer/F14150038/20230114_350_grease_pencil_line_art_vertex_weight_transfer_and_opacity_modifier_from_Group_to_TargetGroup_not_working_test_file_0001.blend)
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Hello, what do you think it looks like? #94033 (Line Art - intersection lines do not receive weight transfers)

Hello, what do you think it looks like? #94033 (Line Art - intersection lines do not receive weight transfers)
Author
Member

Hi, this is working in 2.9.3.1 and it should faded the top like this, with the TargetGroup having Weight transferred:

Screenshot 2023-01-15 at 10.50.46.png

with this setting from Opacity modifier:

Screenshot 2023-01-15 at 10.54.43.png

Hi, this is working in 2.9.3.1 and it should faded the top like this, with the TargetGroup having Weight transferred: ![Screenshot 2023-01-15 at 10.50.46.png](https://archive.blender.org/developer/F14150795/Screenshot_2023-01-15_at_10.50.46.png) with this setting from Opacity modifier: ![Screenshot 2023-01-15 at 10.54.43.png](https://archive.blender.org/developer/F14150797/Screenshot_2023-01-15_at_10.54.43.png)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@mod_moder : please dont remove BF Blender tag

@mod_moder : please dont remove `BF Blender` tag
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser changed title from Line Art - Vertex Weight Transfer to a target group doesn't work to Regression: Line Art - Vertex Weight Transfer to a target group doesn't work 2023-01-20 10:48:37 +01:00

This issue was referenced by 6aa29549e8

This issue was referenced by 6aa29549e889679112fd55f8d4a867c860646387
Member

Added subscribers: @ChengduLittleA, @ZedDB

Added subscribers: @ChengduLittleA, @ZedDB
Member

Caused by 841df831e8 and 3558bb8eae.

These commits moved flags from eLineArtGPencilModifierFlags to eLineartMainFlags, but later on in code, these were still evaluated from the modifiers flags (instead of calculation_flags).
This resulted in a false condition (match_output was assumed true but it wasnt), leading to a wrong codepath taken.

Fix in D17062: Fix #103887: Line Art Vertex Weight Transfer to target group broken

CC @ChengduLittleA
CC @ZedDB

Caused by 841df831e8 and 3558bb8eae. These commits moved flags from `eLineArtGPencilModifierFlags` to `eLineartMainFlags`, but later on in code, these were still evaluated from the modifiers `flags` (instead of `calculation_flags`). This resulted in a false condition (`match_output` was assumed true but it wasnt), leading to a wrong codepath taken. Fix in [D17062: Fix #103887: Line Art Vertex Weight Transfer to target group broken](https://archive.blender.org/developer/D17062) CC @ChengduLittleA CC @ZedDB
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2023-01-21 08:31:03 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103887
No description provided.